[IMP] Fixed spacing issue of shipping address list

--- a/bista_superasia_theme/static/src/scss/style.css
+++ b/bista_superasia_theme/static/src/scss/style.css
@@ -3126,6 +3126,10 @@ a{
   color: #9eccf4;
 }
 
+#delivery_method input {
+  width: auto;
+}
+
 
 /*Accordion CSS*/
 .wrapper{
